# durance

./: .gitignore  README.md  TODO.txt  activity.py  analyse_hrv.py  data.py  fit_info.py  fit_to_json.py  mypy.ini  requirements.txt  setup.cfg  thresholds.py  webapp.py
app/: __main__.py  cli.py  model.py
app/cli/: __main__.py
app/web/: __main__.py
app/web/static/: classless.css
app/web/templates/: activities.html  activity.html  layout.html
doc/: architecture.md  references.md
durance/: activity.py  data.py  denoise.py  measures.py  noise.py
durance/plot/: __main__.py  bokeh.py  matplotlib.py
durance/tests/: test_dfa.py  test_dfa_batch.py
hrv/: __main__.py  activity.py  analyse.py  data.py  denoise.py  dfa.py  features.py  measures.py
hrv/plot/: __main__.py  bokeh.py  matplotlib.py
requirements/: backend.txt  lib-conda.txt  web.txt
scripts/: fit_dump.py
webapp/: __main__.py
webapp/templates/: activities.html
