[metadata]
name = endurance-training
version = 0.0.1
author = Alexandre Saint  
author_email = snt.alex@gmail.com
description = Monitor the evolution of an endurance training from tracking data
long_description = file: README.md
# url = https://github.com/pypa/sampleproject
# project_urls =
#     Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.9

[options.packages.find]
where = .
